# OJ

./: .ycm_extra_conf.py  CMakeLists.txt  todo.txt
assets/: basic.frag  basic.vert
assets/models/powergirl/: properties.json
assets/settings/: lights.json  lights.json.bak  lights.lua
assets/shaders/: basic.frag  basic.vert  light.frag
assets/textures/: powergirl.tga
include/jelly/: camera.h  mesh.h  model.h  renderer.h  shader.h  texture2d.h
oj/jelly/: main.cpp  main.cpp.bak
oj/jelly/graphics/: buffer.cpp  buffer.h  indexbuffer.cpp  indexbuffer.h  light.cpp  light.h  mesh.cpp  mesh.h  model.cpp  model.h  terrain.cpp  terrain.h  vertexarray.cpp  vertexarray.h
oj/jelly/graphics/renderers/: renderer.cpp  renderer.h
oj/jelly/graphics/texture/: texture2d.cpp  texture2d.h
oj/jelly/system/: inputmanager.cpp  inputmanager.h  window.cpp  window.h
oj/jelly/utils/: camera.cpp  camera.h  jsonloader.h  lightloader.cpp  lightloader.h  lualoader.h  objloader.cpp  objloader.h  shader.cpp  shader.h  string.h  transform.cpp  transform.h
oj/jelly/utils/generators/: modelgenerator.cpp  modelgenerator.h
src/: camera.cpp  main.cpp  mesh.cpp  model.cpp  objloader.cpp  renderer.cpp  shader.cpp  texture2d.cpp  transform.cpp  window.cpp
